# dm

./: README.rst  requirements.txt  setup.cfg  tox.ini
dm/core/: exceptions.py  models.py  properties.py  types.py
dm/tests/unit/: base.py  test_utils.py
dm/tests/unit/core/: test_models.py  test_properties.py  test_types.py
tools/jenkins/: compile_and_publish_a_package.sh
